add estimates
