# docs/swagger.json
@@ -170,7 +170,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/db.Article"
+                            "$ref": "#/definitions/db.UpdateArticleRatingParams"
                         }
                     },
                     "400": {
@@ -601,6 +601,17 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "rating": {
+                    "type": "integer"
+                }
+            }
+        },
+        "db.UpdateArticleRatingParams": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
                 },
                 "rating": {
                     "type": "integer"
