# internal/handlers/articles/estimate.go
@@ -3,8 +3,10 @@ package articles
 import (
 	"bytes"
 	"fmt"
+	"io"
 	"log/slog"
 	"net/http"
+	"regexp"
 	"strconv"
 
 	db "github.com/flareopti/deeptruth/internal/db/sqlc"
@@ -20,7 +22,7 @@ import (
 // @Tags articles
 // @Procuce json
 // @Param articleID path int true "Article ID"
-// @Success 200 {object} db.Article
+// @Success 200 {object} db.UpdateArticleRatingParams
 // @Failure 400 {object} resp.Response
 // @Failure 404 {object} resp.Response
 // @Failure 500 {object} resp.Response
@@ -46,24 +48,32 @@ func Estimate(log *slog.Logger, q db.Querier) http.HandlerFunc {
 			log.Error("Failed to get article", sl.Err(err))
 			w.WriteHeader(http.StatusNotFound)
 			render.JSON(w, r, resp.Error("failed to get this article"))
+			return
 		}
 		newRating := getOpenaiRating(log, article)
-		q.UpdateArticleRating(r.Context(), db.UpdateArticleRatingParams{
+		updatedParams := db.UpdateArticleRatingParams{
 			ID:     article.ID,
 			Rating: newRating,
-		})
-		render.JSON(w, r, UpdateRatingParam{Rating: int(newRating)})
+		}
+		_, err = q.UpdateArticleRating(r.Context(), updatedParams)
+		if err != nil {
+			log.Error("Failed to update article rating", sl.Err(err))
+			w.WriteHeader(http.StatusInternalServerError)
+			render.JSON(w, r, resp.Error("failed to update article rating"))
+			return
+		}
+		render.JSON(w, r, updatedParams)
 	}
 }
 
 func getOpenaiRating(log *slog.Logger, article db.Article) int32 {
-	query := fmt.Sprintf(`[{"role": "system", "content": "Ты пытаешься понять является ли следующая информация правдой или ложью"}, {"role": "user", "%s\n%s\n"}]`, article.Title, article.Content)
+	query := fmt.Sprintf(`[{"role": "system", "content": "Ты пытаешься понять является ли следующая информация правдой или ложью, выдай оценку этой новости от 0 до 3, где 0 - ужасающе неправдивая информация, 3 - гарантированная правда. Ответ выдавай в четком формате rating:{число}, например rating:3"}, {"role": "user", "content":"%s\n%s\n"}]`, article.Title, article.Content)
 	body := fmt.Sprintf(`{
-		  "model":       "mixtral-8x7b",
+		  "model":       "gpt-3.5-turbo",
 		  "messages":    %s,
 		  "max_tokens":  1024,
 		  "temperature": 0.8,
-		  "stream":      true
+		  "stream":      false
 		  }`, query)
 
 	openai_r, _ := http.NewRequest("POST", "https://api.naga.ac/v1/chat/completions", bytes.NewBuffer([]byte(body)))
@@ -75,8 +85,25 @@ func getOpenaiRating(log *slog.Logger, article db.Article) int32 {
 	openai_response, err := http.DefaultClient.Do(openai_r)
 	if err != nil {
 		log.Error("Openai service fucked up!", sl.Err(err))
+		return -1
 	}
 	defer openai_response.Body.Close()
+	response, err := io.ReadAll(openai_response.Body)
+	if err != nil {
+		log.Error("Failed to read response", sl.Err(err))
+		return -1
+	}
+	re, err := regexp.Compile(`rating:(\d+)`)
+	if err != nil {
+		log.Error("Failed to find rating", sl.Err(err))
+		return -1
+	}
+	rating_string := re.FindStringSubmatch(string(response))
+	rating, err := strconv.Atoi(rating_string[1])
+	if err != nil {
+		log.Error("Failed to convert", sl.Err(err))
+		return -1
+	}
 
-	return 0
+	return int32(rating)
 }
